--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "axios": "^1.13.0",
     "expo": "~54.0.13",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.15",
@@ -42,6 +43,7 @@
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.16.0",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "tailwindcss": "^3.4.18"
