implemented rest of the features.

--- a/app.json
+++ b/app.json
@@ -33,6 +33,21 @@
       "expo-notifications",
       "expo-dev-client",
       [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera to capture diary photos.",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone for video recording.",
+          "recordAudioAndroid": true
+        }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you update your profile picture and select diary images.",
+          "cameraPermission": "The app accesses your camera to let you take a profile picture and diary photos."
+        }
+      ],
+      [
         "expo-splash-screen",
         {
           "image": "./assets/images/splash-icon.png",
